Fixed a couple bugs found from new module